# loopwright

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docs/: .loopwrite-host-and-vm-setup.md.kate-swp  DEVPLAN.md  V0.2-NOTES.md  loopwright-design.md  loopwrite-host-and-vm-setup.md
examples/: config.example.yaml
loopwright/: __init__.py  cli.py  service.py
loopwright/agent/: __init__.py  assistant.py  openai_client.py
loopwright/core/: __init__.py  config.py  model.py  runlog.py
loopwright/gitctl/: __init__.py  repo.py
loopwright/notify/: __init__.py  ntfy.py
loopwright/orchestrator/: __init__.py  decision.py  deploystep.py  devstep.py  engine.py  fetchgate.py  loop.py  report.py  verifystep.py
loopwright/vmctl/: __init__.py  ssh.py  vm.py
loopwright/web/: __init__.py  app.py
loopwright/web/templates/: _dashboard.html  _log_entries.html  _packet_editor.html  base.html  index.html  logs.html  new_project.html  packet.html  project.html  report.html
tests/: test_agent.py  test_cli.py  test_config.py  test_decision.py  test_deploystep.py  test_devstep.py  test_engine.py  test_fetchgate.py  test_gitctl.py  test_model.py  test_notify.py  test_report.py  test_runlog.py  test_service.py  test_verifystep.py  test_vmctl.py  test_web.py
