[project]
name = "loopwright"
version = "0.1.0"
description = "Local, VM-supervised autonomous software development system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml",
    "fastapi",
    "uvicorn",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "httpx2",
]

[project.scripts]
loopwright = "loopwright.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["loopwright*"]

[tool.setuptools.package-data]
"loopwright.web" = ["templates/*.html", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
